--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
+
+    def room_version = "2.2.6"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
