--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.plattysoft.leonids:LeonidsLib:1.3.2'
 
     def room_version = "2.2.6"
 
